kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      tier: todolist
  template:
    metadata:
      labels:
        app: backend
        tier: todolist
    spec:
      containers:
        - name: backend
          image: todo-backend:latest
          imagePullPolicy: Never  # This ensures the image won't be pulled again
          ports:
            - containerPort: 5000
