kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      tier: todolist
  template:
    metadata:
      labels:
        app: frontend
        tier: todolist
    spec:
      containers:
        - name: frontend
          image: todo-frontend-react:latest
          imagePullPolicy: Never  # This ensures the image won't be pulled again
          ports:
            - containerPort: 80
